--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li>
-              <a class="nav-link scrollto" href="#services"
-                >Administrative Work</a
-              >
+              <a class="nav-link scrollto" href="#services">Responsibilites</a>
             </li>
             <li>
               <a class="nav-link scrollto" href="#sponsored-projects"
@@ -144,8 +142,10 @@
                             <span>Dr. Satish Kumar</span>
                           </p>
                           <p>
-                            <span class="title-s">Profile: </span>
-                            <span>Associate Professor</span>
+                            <span class="title-s">Designation: </span>
+                            <span
+                              >Associate Professor, MED, NIT Jamshedpur</span
+                            >
                           </p>
                           <p>
                             <span class="title-s">Email: </span>
@@ -498,14 +498,18 @@
             <div class="col-sm-12">
               <div class="box-shadow-full">
                 <div class="row">
-                  <h1>Some Publications</h1>
+                  <h1>Publications</h1>
+                  <div class="text-left">
+                    <h3>SCI Indexed Journal</h3>
+                  </div>
                   <ul>
                     <li>
-                      Pondey B, Ragit S and Kumar S (2017), Optimization of
-                      biodiesel production from Sesamoideum oil by Taguchi’s
-                      Technique, International Journal of Applied Agricultural
-                      Research, 12(2), 255-265.
+                      Singh A, Kumar S and Kumar H (2023), A Comparative Study
+                      of Erosion Performance of Thermally Sprayed Ni-Based
+                      Composite Coatings, Journal of Materials Engineering and
+                      Performance <b>(Accepted)</b>.
                     </li>
+                    >
                     <li>
                       Kumar S., Singh, M., Kumar, S., and Mohapatra, S.K.
                       (2017), Optimum values of design variables for high
@@ -537,6 +541,276 @@
         </div>
       </section>
 
+      <!--Research Facilities begins-->
+
+      <section id="short-term" class="about-mf sect-pt4 route">
+        <div class="container" data-aos="zoom-in">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box-shadow-full">
+                <div class="row">
+                  <h1>Research Facilities</h1>
+                  <div class="text-left">
+                    <h3>Rheology Lab</h3>
+                  </div>
+                  <ul class="text-center">
+                    <li class="mb-4">
+                      <div class="d-flex mb-3 flex-column align-items-center">
+                        <img
+                          src="./assets/img/jet erosion.png"
+                          alt="Jet Erosion System"
+                          class="research-images"
+                        />
+                        <ul>
+                          <li>Power Supply: 415 V, 3 Phase, 65 A, 50Hz.</li>
+
+                          <li>Test Specimen Size: 25 x 25 x 5 mm</li>
+                          <li>Specimen Temperature: 800° C (Max)</li>
+                          <li>Conveyer speed:60 RPM (Max)</li>
+                          <li>
+                            Angle of Impinging:15°, 30°, 45°, 60°, 75° and 90°
+                          </li>
+                          <li>AIR Pressure: 8 Bar (Max)</li>
+                          <li>
+                            Abrasive Particle Size: AFS 40/70 (Al2O3) 50μm
+                          </li>
+                          <li>Abrasive Particle Feed Rate: 2 to 8 (g/min)</li>
+                          <li>Abrasive Particle Velocity: 30 to 200 m/s.</li>
+                          <li>Nozzle Material: Al2O3 (Alumina Oxide)</li>
+                          <li>Nozzle Diameter: Ø 1.5 & 4.0 mm</li>
+                          <li>Double Rotating Disc (DRD) Diameter: Ø 90 mm</li>
+                          <li>Double Rotating Disc (DRD) Speed: 3100 RPM</li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li class="mb-4">
+                      <div class="d-flex mb-3 flex-column align-items-center">
+                        <img
+                          src="./assets/img/slurry jet.png"
+                          alt="Slurry jet erosion tester"
+                          class="research-images"
+                        />
+                        <ul>
+                          <li>Fluid: water</li>
+
+                          <li>Velocity: 10-50m/s</li>
+                          <li>
+                            Specimen Size: 20x25x4 to 8 mm & 50x50x4 to 8mm
+                          </li>
+                          <li>
+                            Material: SS 316 and Brass (Any Stainless Steel)
+                          </li>
+                          <li>
+                            Angle of impingement: 150,300,450,600,750 & 900
+                          </li>
+                          <li>Nozzle Size: ID ø3x50MM long, ID ø4x50MM long</li>
+                          <li>Erodent Size: ASF (50/70) IE. 200-300 MICRONS</li>
+                          <li>Materials: Quartz</li>
+                          <li>Erodent flux: 400 to 1500 cc/min</li>
+                          <li>Standoff distance: 50mm</li>
+                          <li>Hopper capacity: 60 liters</li>
+                          <li>Tank capacity: 500 liters</li>
+                          <li>
+                            Water filter: 10 microns, 7no's of filter cartridge
+                          </li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li class="mb-4">
+                      <div class="d-flex mb-3 flex-column align-items-center">
+                        <img
+                          src="./assets/img/rheometer.png"
+                          alt="Rheometer (Anton Parr MCR-92)"
+                          class="research-images"
+                        />
+                        <ul>
+                          <li>Maximum torque: 125 mNm</li>
+                          <li>Minimum torque, rotation: 1μNm</li>
+                          <li>Minimum torque, oscillation: 1μNm</li>
+                          <li>Torque resolution: 100 nNm</li>
+                          <li>Step rate, time constant: 100ms</li>
+                          <li>Step strain, time constant: 100ms</li>
+                          <li>Angular velocity: 10-4-157 rad/sec</li>
+                          <li>Maximum angular velocity: 157 rad/sec</li>
+                          <li>Angular frequency: 10-4 -628 rad/sec</li>
+                          <li>Speed: 10-4-1500 rpm</li>
+                          <li>Temperature range: -50° to +400°C</li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="d-flex mb-3 flex-column align-items-center">
+                        <img
+                          src="./assets/img/CFD Workstatiom.png"
+                          alt="CFD Workstation"
+                          class="research-images"
+                        />
+                        <ul>
+                          <li>Processor: Intel Xeon Gold series</li>
+
+                          <li>
+                            Operating system: Windows 10 professional 64 bit
+                          </li>
+                          <li>Graphics: NVIDIA Quadro P2000 5GB</li>
+                          <li>RAM: 128 GB DDR4</li>
+                          <li>Memory: 2TB SSD</li>
+                          <li>Display: 1080p 71cm Flat IPS Monitor</li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li
+                      class="d-flex flex-wrap gap-4 align-items-center justify-content-center"
+                    >
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/Data accusation system.png"
+                          alt="Data accusation system"
+                        />
+                        <h6>Data Accusation System</h6>
+                        <span>Number of data Collection point: 10 </span>
+                        <span> Data per second: 1-10 </span>
+                      </div>
+                      <div class="research-card">
+                        <img src="./assets/img/microwave.png" alt="Microwave" />
+                        <h6>Microwave</h6>
+                      </div>
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/Sieve shaker.png"
+                          alt="Sieve Shaker"
+                        />
+                        <h6>Sieve Shaker</h6>
+                        <span>Sieve size: 35μm – 1mm</span>
+                      </div>
+                      <div class="research-card">
+                        <img src="./assets/img/ph Meter.png" alt="ph-Meter" />
+                        <h6>PH-Meter</h6>
+                      </div>
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/magnetic Stirrer.png"
+                          alt="Magnetic Stirrer"
+                        />
+                        <h6>Magnetic Stirrer</h6>
+                        <span>Speed: 1250 rpm </span>
+                        <span> Temperature: 0-100°C </span>
+                      </div>
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/Lab scale ball mill crusher.png"
+                          alt="Lab scale ball mill crusher"
+                        />
+                        <h6>Lab Scale Ball Mill Crusher</h6>
+                        <span>Speed: 1-120 rpm</span>
+                      </div>
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/Electro Magnetic Flow Meter.png"
+                          alt="Electro Magnetic Flow Meter"
+                        />
+                        <h6>Electro Magnetic Flow Meter</h6>
+                        <span>(Dia: 50mm & 100mm) </span>
+                        <span> Flow rate: 0-60 m3/hr </span>
+                      </div>
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/High sensitive weight machine.png"
+                          alt="High sensitive weight machine"
+                        />
+                        <h6>High sensitive weight machine</h6>
+                        <span>Weight capacity: 1mg - 10kg</span>
+                      </div>
+                      <div class="research-card">
+                        <img
+                          src="./assets/img/Pilot plant slurry test loop.png"
+                          alt="Pilot plant slurry test loop"
+                        />
+                        <h6>Pilot Plant Slurry Test Loop</h6>
+                        <span>Length: 30m</span>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Research Facilities ends-->
+
+      <!--Research Group Starts-->
+      <div
+        class="section-counter paralax-mf bg-image"
+        style="background-image: url(assets/img/counters-bg.jpg)"
+        id="research-group"
+      >
+        <div class="overlay-mf"></div>
+        <div class="container position-relative">
+          <div class="row">
+            <div class="col-sm-3 col-lg-3">
+              <div
+                class="counter-box counter-box pt-4 pt-md-0"
+                data-aos="zoom-in"
+              >
+                <div class="counter-ico">
+                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                </div>
+                <div class="counter-num">
+                  <span class="counter-text"
+                    >Mr. Chandan Gupta<br />(2019RSME010)</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3 col-lg-3">
+              <div
+                class="counter-box counter-box pt-4 pt-md-0"
+                data-aos="zoom-in"
+              >
+                <div class="counter-ico">
+                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                </div>
+                <div class="counter-num">
+                  <span class="counter-text"
+                    >Mr. Ashisha Ranjan Pradhan<br />(2019RSME004)</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3 col-lg-3">
+              <div
+                class="counter-box counter-box pt-4 pt-md-0"
+                data-aos="zoom-in"
+              >
+                <div class="counter-ico">
+                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                </div>
+                <div class="counter-num">
+                  <span class="counter-text"
+                    >Mr. Mukund Kumar<br />(2021RSME018)</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3 col-lg-3">
+              <div
+                class="counter-box counter-box pt-4 pt-md-0"
+                data-aos="zoom-in"
+              >
+                <div class="counter-ico">
+                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                </div>
+                <div class="counter-num">
+                  <span class="counter-text"
+                    >Mr. Ravi Shankar Kumar<br />(2022RSME004)</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Research Group Ends-->
       <!-- <--- ======= Testimonials Section ======= -->
       <!-- <div
         class="testimonials paralax-mf bg-image"
