facilities details removed and nav improved

--- a/index.html
+++ b/index.html
@@ -69,26 +69,15 @@
             <li>
               <a class="nav-link scrollto" href="#publication">Publication </a>
             </li>
-            <!-- <li class="dropdown">
-            <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown">
-                <a href="#"><span>Deep Drop Down</span>
-                  <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
+            <li class="dropdown">
+              <a href="#"
+                ><span>Research</span> <i class="bi bi-chevron-down"></i
+              ></a>
+              <ul>
+                <li><a href="#research-facilities">Facilities</a></li>
+                <li><a href="#research-group">Group</a></li>
+              </ul>
+            </li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -319,7 +308,7 @@
                 <div class="counter-num">
                   <p
                     data-purecounter-start="0"
-                    data-purecounter-end="16"
+                    data-purecounter-end="78"
                     data-purecounter-duration="1"
                     class="counter purecounter"
                   ></p>
@@ -543,7 +532,7 @@
 
       <!--Research Facilities begins-->
 
-      <section id="short-term" class="about-mf sect-pt4 route">
+      <section id="research-facilities" class="about-mf sect-pt4 route">
         <div class="container" data-aos="zoom-in">
           <div class="row">
             <div class="col-sm-12">
@@ -553,111 +542,51 @@
                   <div class="text-left">
                     <h3>Rheology Lab</h3>
                   </div>
-                  <ul class="text-center">
-                    <li class="mb-4">
-                      <div class="d-flex mb-3 flex-column align-items-center">
-                        <img
-                          src="./assets/img/jet erosion.png"
-                          alt="Jet Erosion System"
-                          class="research-images"
-                        />
-                        <ul>
-                          <li>Power Supply: 415 V, 3 Phase, 65 A, 50Hz.</li>
-
-                          <li>Test Specimen Size: 25 x 25 x 5 mm</li>
-                          <li>Specimen Temperature: 800° C (Max)</li>
-                          <li>Conveyer speed:60 RPM (Max)</li>
-                          <li>
-                            Angle of Impinging:15°, 30°, 45°, 60°, 75° and 90°
-                          </li>
-                          <li>AIR Pressure: 8 Bar (Max)</li>
-                          <li>
-                            Abrasive Particle Size: AFS 40/70 (Al2O3) 50μm
-                          </li>
-                          <li>Abrasive Particle Feed Rate: 2 to 8 (g/min)</li>
-                          <li>Abrasive Particle Velocity: 30 to 200 m/s.</li>
-                          <li>Nozzle Material: Al2O3 (Alumina Oxide)</li>
-                          <li>Nozzle Diameter: Ø 1.5 & 4.0 mm</li>
-                          <li>Double Rotating Disc (DRD) Diameter: Ø 90 mm</li>
-                          <li>Double Rotating Disc (DRD) Speed: 3100 RPM</li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li class="mb-4">
-                      <div class="d-flex mb-3 flex-column align-items-center">
-                        <img
-                          src="./assets/img/slurry jet.png"
-                          alt="Slurry jet erosion tester"
-                          class="research-images"
-                        />
-                        <ul>
-                          <li>Fluid: water</li>
-
-                          <li>Velocity: 10-50m/s</li>
-                          <li>
-                            Specimen Size: 20x25x4 to 8 mm & 50x50x4 to 8mm
-                          </li>
-                          <li>
-                            Material: SS 316 and Brass (Any Stainless Steel)
-                          </li>
-                          <li>
-                            Angle of impingement: 150,300,450,600,750 & 900
-                          </li>
-                          <li>Nozzle Size: ID ø3x50MM long, ID ø4x50MM long</li>
-                          <li>Erodent Size: ASF (50/70) IE. 200-300 MICRONS</li>
-                          <li>Materials: Quartz</li>
-                          <li>Erodent flux: 400 to 1500 cc/min</li>
-                          <li>Standoff distance: 50mm</li>
-                          <li>Hopper capacity: 60 liters</li>
-                          <li>Tank capacity: 500 liters</li>
-                          <li>
-                            Water filter: 10 microns, 7no's of filter cartridge
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li class="mb-4">
-                      <div class="d-flex mb-3 flex-column align-items-center">
-                        <img
-                          src="./assets/img/rheometer.png"
-                          alt="Rheometer (Anton Parr MCR-92)"
-                          class="research-images"
-                        />
-                        <ul>
-                          <li>Maximum torque: 125 mNm</li>
-                          <li>Minimum torque, rotation: 1μNm</li>
-                          <li>Minimum torque, oscillation: 1μNm</li>
-                          <li>Torque resolution: 100 nNm</li>
-                          <li>Step rate, time constant: 100ms</li>
-                          <li>Step strain, time constant: 100ms</li>
-                          <li>Angular velocity: 10-4-157 rad/sec</li>
-                          <li>Maximum angular velocity: 157 rad/sec</li>
-                          <li>Angular frequency: 10-4 -628 rad/sec</li>
-                          <li>Speed: 10-4-1500 rpm</li>
-                          <li>Temperature range: -50° to +400°C</li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex mb-3 flex-column align-items-center">
-                        <img
-                          src="./assets/img/CFD Workstatiom.png"
-                          alt="CFD Workstation"
-                          class="research-images"
-                        />
-                        <ul>
-                          <li>Processor: Intel Xeon Gold series</li>
-
-                          <li>
-                            Operating system: Windows 10 professional 64 bit
-                          </li>
-                          <li>Graphics: NVIDIA Quadro P2000 5GB</li>
-                          <li>RAM: 128 GB DDR4</li>
-                          <li>Memory: 2TB SSD</li>
-                          <li>Display: 1080p 71cm Flat IPS Monitor</li>
-                        </ul>
-                      </div>
-                    </li>
+                  <ul class="text-center research-items">
+                    <div
+                      class="d-flex flex-wrap gap-4 align-items-center justify-content-center"
+                    >
+                      <li class="mb-4">
+                        <div class="research-card">
+                          <img
+                            src="./assets/img/jet erosion.png"
+                            alt="Jet Erosion System"
+                            class="research-images"
+                          />
+                          <h6>Jet Erosion System</h6>
+                        </div>
+                      </li>
+                      <li class="mb-4">
+                        <div class="research-card">
+                          <img
+                            src="./assets/img/slurry jet.png"
+                            alt="Slurry jet erosion tester"
+                            class="research-images"
+                          />
+                          <h6>Slurry Jet Erosion Tester</h6>
+                        </div>
+                      </li>
+                      <li class="mb-4">
+                        <div class="research-card">
+                          <img
+                            src="./assets/img/rheometer.png"
+                            alt="Rheometer (Anton Parr MCR-92)"
+                            class="research-images"
+                          />
+                          <h6>Rheometer (Anton Parr MCR-92)</h6>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="research-card">
+                          <img
+                            src="./assets/img/CFD Workstatiom.png"
+                            alt="CFD Workstation"
+                            class="research-images"
+                          />
+                          <h6>CFD Workstation</h6>
+                        </div>
+                      </li>
+                    </div>
                     <li
                       class="d-flex flex-wrap gap-4 align-items-center justify-content-center"
                     >
@@ -667,8 +596,6 @@
                           alt="Data accusation system"
                         />
                         <h6>Data Accusation System</h6>
-                        <span>Number of data Collection point: 10 </span>
-                        <span> Data per second: 1-10 </span>
                       </div>
                       <div class="research-card">
                         <img src="./assets/img/microwave.png" alt="Microwave" />
@@ -680,7 +607,6 @@
                           alt="Sieve Shaker"
                         />
                         <h6>Sieve Shaker</h6>
-                        <span>Sieve size: 35μm – 1mm</span>
                       </div>
                       <div class="research-card">
                         <img src="./assets/img/ph Meter.png" alt="ph-Meter" />
@@ -692,8 +618,6 @@
                           alt="Magnetic Stirrer"
                         />
                         <h6>Magnetic Stirrer</h6>
-                        <span>Speed: 1250 rpm </span>
-                        <span> Temperature: 0-100°C </span>
                       </div>
                       <div class="research-card">
                         <img
@@ -701,7 +625,6 @@
                           alt="Lab scale ball mill crusher"
                         />
                         <h6>Lab Scale Ball Mill Crusher</h6>
-                        <span>Speed: 1-120 rpm</span>
                       </div>
                       <div class="research-card">
                         <img
@@ -709,8 +632,6 @@
                           alt="Electro Magnetic Flow Meter"
                         />
                         <h6>Electro Magnetic Flow Meter</h6>
-                        <span>(Dia: 50mm & 100mm) </span>
-                        <span> Flow rate: 0-60 m3/hr </span>
                       </div>
                       <div class="research-card">
                         <img
@@ -718,7 +639,6 @@
                           alt="High sensitive weight machine"
                         />
                         <h6>High sensitive weight machine</h6>
-                        <span>Weight capacity: 1mg - 10kg</span>
                       </div>
                       <div class="research-card">
                         <img
@@ -726,7 +646,6 @@
                           alt="Pilot plant slurry test loop"
                         />
                         <h6>Pilot Plant Slurry Test Loop</h6>
-                        <span>Length: 30m</span>
                       </div>
                     </li>
                   </ul>
@@ -753,7 +672,7 @@
                 data-aos="zoom-in"
               >
                 <div class="counter-ico">
-                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                  <img src="./assets/img/chandan.jpg" alt="img" class="team" />
                 </div>
                 <div class="counter-num">
                   <span class="counter-text"
@@ -768,11 +687,11 @@
                 data-aos="zoom-in"
               >
                 <div class="counter-ico">
-                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                  <img src="./assets/img/asisha.jpg" alt="img" class="team" />
                 </div>
                 <div class="counter-num">
                   <span class="counter-text"
-                    >Mr. Ashisha Ranjan Pradhan<br />(2019RSME004)</span
+                    >Mr. Asisha Ranjan Pradhan<br />(2020RSME004)</span
                   >
                 </div>
               </div>
@@ -783,7 +702,7 @@
                 data-aos="zoom-in"
               >
                 <div class="counter-ico">
-                  <img src="./assets/img/satish.png" alt="img" class="team" />
+                  <img src="./assets/img/mukund.jpg" alt="img" class="team" />
                 </div>
                 <div class="counter-num">
                   <span class="counter-text"
