--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                             alt="Jet Erosion System"
                             class="research-images"
                           />
-                          <h6>Jet Erosion System</h6>
+                          <h6>High Temperature Air Jet Erosion System</h6>
                         </div>
                       </li>
                       <li class="mb-4">
@@ -559,7 +559,7 @@
                             alt="Slurry jet erosion tester"
                             class="research-images"
                           />
-                          <h6>High Erosion Jet Erosion Tester</h6>
+                          <h6>Slurry Jet Erosion Tester</h6>
                         </div>
                       </li>
                       <li class="mb-4">
